Nav bar has been created

--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" data-auto-replace-svg="nest"></script>
     <title>Wild-coin</title>
 </head>
 <body>
-    
+    <header>
+        <div class="topnav">
+            <div class="burger">
+                <a href="">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+            <div class="logo-title">
+                <img class="logo" href="index.html" src="img/W-logo-white-coralback-_1_.webp" alt="logo wild code school coin">
+                <a href="index.html" class="coin"><h2>coin</h2></a>
+            </div>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <i class="fas fa-times"></i>
+                </li>
+                <li>
+                    <a href="index.html">Accueil</a></li>
+                <li>
+                    <a href="src/cours.html">Cours</a>
+                </li>
+                <li>
+                    <a href="src/team.html">Equipe</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <footer>
+        <div>Contactez-nous</div>
+        <div class="logo-reseaux-sociaux">
+            <div>
+                <i class="fab fa-facebook"></i>
+            </div>
+            <div>
+                <i class="fab fa-instagram"></i>
+            </div>
+            <div>
+                <i class="fab fa-youtube"></i>
+            </div>
+            <div>
+                <i class="fab fa-twitter-square"></i>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
