--- a/src/team.html
+++ b/src/team.html
@@ -4,41 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wild-coin</title>
-    <link href="../style.css" rel="stylesheet">
+    <title>WildCoin</title>
+    <link href="..assets/style/style.css" rel="stylesheet">
 </head>
 <body>
     <div id="body-container">
         <main id="main-container" class="container">
-            <section id="julien" class="container item">
-                <div class="container profil-description invert-description">
-                    <h3>Julien</h3>
-                    <p>Web Front Developer</p>
-                </div>
-                <img src="../img/man-6077947_960_720.webp" class="profil-img">
-            </section>
-            <section id="matthieu" class="container item invert">
-                <div class="container profil-description">
-                    <h3>Matthieu</h3>
-                    <p>Web Front Developer</p>
-                </div>
-                <img src="../img/man-6077947_960_720.webp" class="profil-img">
-            </section>
-            <section id="matthias" class="container item">
-                <div class="container profil-description invert-description">
-                    <h3>Matthias</h3>
-                    <p>Web Front Developer</p>
-                </div>
-                <img src="../img/man-6077947_960_720.webp" class="profil-img">
-            </section>
-            <section id="mickael" class="container item invert">
-                <div class="container profil-description">
-                    <h3>Mickael</h3>
-                    <p>Web Front Developer</p>
-                </div>
-                <img src="../img/man-6077947_960_720.webp" class="profil-img">
-            </section>
-        </main>    
+            
+        </main>
     </div>
+    <script src="../assets/js/items.js"></script>
+    <script src="../assets/js/team.js"></script>
 </body>
 </html>
