End of team loop. Add class invert and invert-description to HTML element for layout

--- a/src/team.html
+++ b/src/team.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WildCoin</title>
-    <link href="..assets/style/style.css" rel="stylesheet">
+    <link href="../assets/style/style.css" rel="stylesheet">
 </head>
 <body>
     <div id="body-container">
         <main id="main-container" class="container">
-            
+
         </main>
     </div>
     <script src="../assets/js/items.js"></script>
