Top navbar has been completed

--- a/index.html
+++ b/index.html
@@ -17,26 +17,32 @@
                 </a>
             </div>
             <div class="logo-title">
-                <img class="logo" href="index.html" src="img/W-logo-white-coralback-_1_.webp" alt="logo wild code school coin">
-                <a href="index.html" class="coin"><h2>coin</h2></a>
+                <img class="logo" href="index.html" src="img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
+                <a class="coin" href="index.html"><h2>coin</h2></a>
+                <ul class="menu_desktop">
+                    <li>Accueil</li>
+                    <li>Cours</li>
+                    <li>L'équipe</li>
+                </ul>
             </div>
         </div>
-        <nav>
-            <ul>
-                <li>
+        <nav class="nav-menu">
+            <ul class="nav-slider">
+                <li class="nav-slider-menu-x">
                     <i class="fas fa-times"></i>
                 </li>
-                <li>
-                    <a href="index.html">Accueil</a></li>
-                <li>
-                    <a href="src/cours.html">Cours</a>
+                <li class="nav-slider-menu">
+                    <a href="index.html"><h2>Accueil</h2></a></li>
+                <li class="nav-slider-menu">
+                    <a href="src/cours.html"><h2>Cours</h2></a>
                 </li>
-                <li>
-                    <a href="src/team.html">Equipe</a>
+                <li class="nav-slider-menu">
+                    <a href="src/team.html"><h2>Equipe</h2></a>
                 </li>
             </ul>
         </nav>
     </header>
+    <div class="container"></div>
     <footer>
         <div>Contactez-nous</div>
         <div class="logo-reseaux-sociaux">
