Top navbar has been modified

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="logo-title">
                 <img class="logo" href="index.html" src="img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
                 <a class="coin" href="index.html"><h2>coin</h2></a>
-                <ul class="menu_desktop">
+                <ul class="menu-desktop">
                     <li>Accueil</li>
                     <li>Cours</li>
                     <li>L'équipe</li>
