Integration of header from branch feature/menu

--- a/src/team.html
+++ b/src/team.html
@@ -9,10 +9,44 @@
 </head>
 <body>
     <div id="body-container">
+        <header>
+            <div class="topnav">
+                <div class="burger">
+                    <a href="">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </div>
+                <div class="logo-title">
+                    <img class="logo" href="index.html" src="img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
+                    <a class="coin" href="index.html"><h2>coin</h2></a>
+                    <ul class="menu_desktop">
+                        <li>Accueil</li>
+                        <li>Cours</li>
+                        <li>L'équipe</li>
+                    </ul>
+                </div>
+            </div>
+            <nav class="nav-menu">
+                <ul class="nav-slider">
+                    <li class="nav-slider-menu-x">
+                        <i class="fas fa-times"></i>
+                    </li>
+                    <li class="nav-slider-menu">
+                        <a href="index.html"><h2>Accueil</h2></a></li>
+                    <li class="nav-slider-menu">
+                        <a href="src/cours.html"><h2>Cours</h2></a>
+                    </li>
+                    <li class="nav-slider-menu">
+                        <a href="src/team.html"><h2>Equipe</h2></a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <main id="main-container" class="container">
 
         </main>
     </div>
+    <script src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" data-auto-replace-svg="nest"></script>
     <script src="../assets/js/items.js"></script>
     <script src="../assets/js/team.js"></script>
 </body>
