--- a/src/team.html
+++ b/src/team.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WildCoin</title>
-    <link href="../assets/style/style.css" rel="stylesheet">
+    <link href="../assets/css/style.css" rel="stylesheet">
 </head>
 <body>
     <div id="body-container">
@@ -17,7 +17,7 @@
                     </a>
                 </div>
                 <div class="logo-title">
-                    <img class="logo" href="index.html" src="img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
+                    <img class="logo" href="index.html" src="../assets/img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
                     <a class="coin" href="index.html"><h2>coin</h2></a>
                     <ul class="menu_desktop">
                         <li>Accueil</li>
@@ -43,9 +43,10 @@
             </nav>
         </header>
         <main id="main-container" class="container">
-
+        
         </main>
     </div>
+
     <script src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" data-auto-replace-svg="nest"></script>
     <script src="../assets/js/items.js"></script>
     <script src="../assets/js/team.js"></script>
