--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <script src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" data-auto-replace-svg="nest"></script>
     <title>Wild-coin</title>
 </head>
 <body>
     <header>
         <div class="topnav">
-            <div class="burger">
-                <a href="">
-                    <i class="fa fa-bars"></i>
-                </a>
+            <div class="burger" id="burger">
+                <span></span>
             </div>
             <div class="logo-title">
-                <img class="logo" href="index.html" src="img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
+                <img class="logo" href="index.html" src="assets/img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
                 <a class="coin" href="index.html"><h2>coin</h2></a>
                 <ul class="menu-desktop">
                     <li>Accueil</li>
@@ -26,18 +24,18 @@
                 </ul>
             </div>
         </div>
-        <nav class="nav-menu">
+        <nav class="nav-menu" id="nav-menu">
             <ul class="nav-slider">
                 <li class="nav-slider-menu-x">
                     <i class="fas fa-times"></i>
                 </li>
                 <li class="nav-slider-menu">
-                    <a href="index.html"><h2>Accueil</h2></a></li>
+                    <a href="index.html">Accueil</a></li>
                 <li class="nav-slider-menu">
-                    <a href="src/cours.html"><h2>Cours</h2></a>
+                    <a href="src/cours.html">Cours</a>
                 </li>
                 <li class="nav-slider-menu">
-                    <a href="src/team.html"><h2>Equipe</h2></a>
+                    <a href="src/team.html">Equipe</a>
                 </li>
             </ul>
         </nav>
@@ -60,5 +58,6 @@
             </div>
         </div>
     </footer>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
