Optimization of the navbar + footer

--- a/index.html
+++ b/index.html
@@ -16,19 +16,16 @@
             </div>
             <div class="logo-title">
                 <img class="logo" href="index.html" src="assets/img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
-                <a class="coin" href="index.html"><h2>coin</h2></a>
+                <a class="coin" href="index.html">wildcoin</a>
                 <ul class="menu-desktop">
-                    <li>Accueil</li>
-                    <li>Cours</li>
-                    <li>L'équipe</li>
+                    <li class="menu-desktop-li">Accueil</li>
+                    <li class="menu-desktop-li">Cours</li>
+                    <li class="menu-desktop-li">L'équipe</li>
                 </ul>
             </div>
         </div>
         <nav class="nav-menu" id="nav-menu">
             <ul class="nav-slider">
-                <li class="nav-slider-menu-x">
-                    <i class="fas fa-times"></i>
-                </li>
                 <li class="nav-slider-menu">
                     <a href="index.html">Accueil</a></li>
                 <li class="nav-slider-menu">
@@ -42,19 +39,19 @@
     </header>
     <div class="container"></div>
     <footer>
-        <div>Contactez-nous</div>
+        <div class="footer-content">Contactez-nous</div>
         <div class="logo-reseaux-sociaux">
-            <div>
+            <div class="logo-size"> 
                 <i class="fab fa-facebook"></i>
             </div>
-            <div>
+            <div class="logo-size">
                 <i class="fab fa-instagram"></i>
             </div>
-            <div>
+            <div class="logo-size">
                 <i class="fab fa-youtube"></i>
             </div>
-            <div>
-                <i class="fab fa-twitter-square"></i>
+            <div class="logo-size">
+                <i class="fab fa-github"></i>
             </div>
         </div>
     </footer>
