Optimization 2  of the navbar + footer

--- a/index.html
+++ b/index.html
@@ -1,60 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
-    <script src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" data-auto-replace-svg="nest"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
+    <link rel="stylesheet" href="assets/style.css" />
+    <script
+      src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
+      data-auto-replace-svg="nest"
+    ></script>
     <title>Wild-coin</title>
-</head>
-<body>
-    <header>
-        <div class="topnav">
-            <div class="burger" id="burger">
-                <span></span>
-            </div>
-            <div class="logo-title">
-                <img class="logo" href="index.html" src="assets/img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
-                <a class="coin" href="index.html">wildcoin</a>
-                <ul class="menu-desktop">
-                    <li class="menu-desktop-li">Accueil</li>
-                    <li class="menu-desktop-li">Cours</li>
-                    <li class="menu-desktop-li">L'équipe</li>
-                </ul>
-            </div>
-        </div>
-        <nav class="nav-menu" id="nav-menu">
-            <ul class="nav-slider">
-                <li class="nav-slider-menu">
-                    <a href="index.html">Accueil</a></li>
-                <li class="nav-slider-menu">
-                    <a href="src/cours.html">Cours</a>
-                </li>
-                <li class="nav-slider-menu">
-                    <a href="src/team.html">Equipe</a>
-                </li>
-            </ul>
-        </nav>
+  </head>
+  <body>
+    <header class="topnav">
+      <div class="burger" id="burger">
+        <span></span>
+      </div>
+      <div class="logo-title">
+        <img
+          class="logo"
+          href="index.html"
+          src="assets/img/W-logo-white-coralback-_1_.webp"
+          alt="wild code school project wild coin"
+        />
+        <a class="coin" href="index.html">wildcoin</a>
+      </div>
+      <nav class="nav-menu" id="nav-menu">
+        <ul class="nav-slider">
+          <li class="nav-slider-item">
+            <a href="index.html">Accueil</a>
+          </li>
+          <li class="nav-slider-item">
+            <a href="src/cours.html">Cours</a>
+          </li>
+          <li class="nav-slider-item">
+            <a href="src/team.html">Equipe</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="container"></div>
     <footer>
-        <div class="footer-content">Contactez-nous</div>
-        <div class="logo-reseaux-sociaux">
-            <div class="logo-size"> 
-                <i class="fab fa-facebook"></i>
-            </div>
-            <div class="logo-size">
-                <i class="fab fa-instagram"></i>
-            </div>
-            <div class="logo-size">
-                <i class="fab fa-youtube"></i>
-            </div>
-            <div class="logo-size">
-                <i class="fab fa-github"></i>
-            </div>
+      <div class="footer-content">Contactez-nous</div>
+      <div class="logo-reseaux-sociaux">
+        <div class="logo-size">
+          <i class="fab fa-facebook"></i>
         </div>
+        <div class="logo-size">
+          <i class="fab fa-instagram"></i>
+        </div>
+        <div class="logo-size">
+          <i class="fab fa-youtube"></i>
+        </div>
+        <div class="logo-size">
+          <i class="fab fa-github"></i>
+        </div>
+      </div>
     </footer>
     <script src="./assets/script.js"></script>
-</body>
+  </body>
 </html>
