Optimization 3  of the navbar + footer

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <img
           class="logo"
           href="index.html"
-          src="assets/img/W-logo-white-coralback-_1_.webp"
+          src="assets/img/Copie_de_logo-white-transparentback_1.png"
           alt="wild code school project wild coin"
         />
-        <a class="coin" href="index.html">wildcoin</a>
+        <!-- <a class="coin" href="index.html">wildcoin</a> -->
       </div>
       <nav class="nav-menu" id="nav-menu">
         <ul class="nav-slider">
