Burger menu has been placed correctly and the cinematic is working good for mobile

--- a/index.html
+++ b/index.html
@@ -15,32 +15,34 @@
     <title>Wild-coin</title>
   </head>
   <body>
-    <header class="topnav">
+    <header>
       <div class="burger" id="burger">
         <span></span>
       </div>
-      <div class="logo-title">
-        <img
-          class="logo"
-          href="index.html"
-          src="assets/img/Copie_de_logo-white-transparentback_1.png"
-          alt="wild code school project wild coin"
-        />
-        <!-- <a class="coin" href="index.html">wildcoin</a> -->
+      <div class="topnav">
+        <div class="logo-title">
+          <img
+            class="logo"
+            href="index.html"
+            src="assets/img/Copie_de_logo-white-transparentback_1.png"
+            alt="wild code school project wild coin"
+          />
+          <!-- <a class="coin" href="index.html">wildcoin</a> -->
+        </div>
+        <nav class="nav-menu" id="nav-menu">
+          <ul class="nav-slider">
+            <li class="nav-slider-item">
+              <a href="index.html">Accueil</a>
+            </li>
+            <li class="nav-slider-item">
+              <a href="src/cours.html">Cours</a>
+            </li>
+            <li class="nav-slider-item">
+              <a href="src/team.html">Equipe</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav class="nav-menu" id="nav-menu">
-        <ul class="nav-slider">
-          <li class="nav-slider-item">
-            <a href="index.html">Accueil</a>
-          </li>
-          <li class="nav-slider-item">
-            <a href="src/cours.html">Cours</a>
-          </li>
-          <li class="nav-slider-item">
-            <a href="src/team.html">Equipe</a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <div class="container"></div>
     <footer>
