--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div class="carousel">
             <ul class="carousel__menu">
-                <li class="carousel__left">
+                <li class="carousel__arrow">
                     <button onclick="moveDirection('left')">
                         <svg viewBox="0 0 490 490" width="30" x="0px" xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg" y="0px">
@@ -112,7 +112,7 @@
                     <button class="carousel__button">4</button>
                 </li>
 
-                <li class="carousel__right">
+                <li class="carousel__arrow">
                     <button onclick="moveDirection('right')">
                         <svg viewBox="0 0 490 490" width="30" x="0px" xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg" y="0px">
