First work on the media query, mobile setup and 576px setup is working

--- a/index.html
+++ b/index.html
@@ -40,13 +40,24 @@
             <li class="nav-slider-item">
               <a href="src/team.html">Equipe</a>
             </li>
+            <li class="nav-slider-item">
+                <a href=""></a>
+              </li>
           </ul>
         </nav>
       </div>
     </header>
     <div class="container"></div>
     <footer>
-      <div class="footer-content">Contactez-nous</div>
+      <div class="footer-content">
+          <ul class="footer-contact"> 
+              <li class="footer-contact-item">
+                  <a href="">
+                    Contactez-nous
+                  </a>
+              </li>
+          </ul>
+      </div>
       <div class="logo-reseaux-sociaux">
         <div class="logo-size">
           <i class="fab fa-facebook"></i>
