--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>WildCoin</title>
 
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="assets/css/homepage.css" rel="stylesheet">
 </head>
 <body>
-    <button id="themeSwap" onclick="swapTheme()">
-        <svg height="30px" viewBox="0 0 24 24" width="18px" xmlns="http://www.w3.org/2000/svg">
-            <path d="M0 0h24v24H0z" fill="none"/>
-            <path d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.79 1.42-1.41zM4 10.5H1v2h3v-2zm9-9.95h-2V3.5h2V.55zm7.45 3.91l-1.41-1.41-1.79 1.79 1.41 1.41 1.79-1.79zm-3.21 13.7l1.79 1.8 1.41-1.41-1.8-1.79-1.4 1.4zM20 10.5v2h3v-2h-3zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm-1 16.95h2V19.5h-2v2.95zm-7.45-3.91l1.41 1.41 1.79-1.8-1.41-1.41-1.79 1.8z"/>
-        </svg>
-    </button>
     <!-- Header -->
+    <div style="height: 10vh; background-color: red;">
+        <!-- Theme toggler -->
+        <button id="themeSwap" onclick="swapTheme()">
+            <svg height="30px" viewBox="0 0 24 24" width="18px" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.79 1.42-1.41zM4 10.5H1v2h3v-2zm9-9.95h-2V3.5h2V.55zm7.45 3.91l-1.41-1.41-1.79 1.79 1.41 1.41 1.79-1.79zm-3.21 13.7l1.79 1.8 1.41-1.41-1.8-1.79-1.4 1.4zM20 10.5v2h3v-2h-3zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm-1 16.95h2V19.5h-2v2.95zm-7.45-3.91l1.41 1.41 1.79-1.8-1.41-1.41-1.79 1.8z"/>
+            </svg>
+        </button>
+    </div>
+
+    <!-- Main content -->
     <main>
         <div class="article">
             <div class="article__wrapper">
@@ -60,77 +68,83 @@
                     </p>
                 </div>
             </div>
+
         </div>
 
-        <div class="article__video">
-            <img alt="" class="article__thumbnail" src="assets/img/video_bitcoin.jpg">
-            <div class="article__complement">
-                <p class="article__title">2020</p>
-                <p class="article__date">01 / 01 / 2020</p>
-                <p class="article__description">Bitcoin is boomer</p>
-                <p class="article__tags">
-                    <span class="article__tag">#bitcoin</span>
-                    <span class="article__tag">#boomer</span>
-                </p>
-            </div>
-        </div>
+        <div class="flex" id="bottom">
+            <div class="carousel">
+                <h2 style="width: 100%;">Recent tendance videos</h2>
+                <div class="article__video">
+                    <img alt="" class="article__thumbnail" src="assets/img/blockchain.webp">
+                    <div class="article__complement">
+                        <p class="article__title">2020</p>
+                        <p class="article__date">01 / 01 / 2020</p>
+                        <p class="article__description">Bitcoin is boomer</p>
+                        <p class="article__tags">
+                            <span class="article__tag">#bitcoin</span>
+                            <span class="article__tag">#boomer</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="article__video">
+                    <img alt="" class="article__thumbnail" src="assets/img/blockchain.webp">
+                    <div class="article__complement">
+                        <p class="article__title">2021</p>
+                        <p class="article__date">01 / 01 / 2022</p>
+                        <p class="article__description">Bitcoin is boomer</p>
+                        <p class="article__tags">
+                            <span class="article__tag">#bitcoin</span>
+                            <span class="article__tag">#boomer</span>
+                        </p>
+                    </div>
+                </div>
 
-        <div class="article__video">
-            <img alt="" class="article__thumbnail" src="assets/img/video_bitcoin.jpg">
-            <div class="article__complement">
-                <p class="article__title">2021</p>
-                <p class="article__date">01 / 01 / 2022</p>
-                <p class="article__description">Bitcoin is boomer</p>
-                <p class="article__tags">
-                    <span class="article__tag">#bitcoin</span>
-                    <span class="article__tag">#boomer</span>
-                </p>
-            </div>
-        </div>
-
-        <div class="carousel">
-            <ul class="carousel__menu">
-                <li class="carousel__arrow">
-                    <button onclick="moveDirection('left')">
-                        <svg viewBox="0 0 490 490" width="30" x="0px" xml:space="preserve"
-                             xmlns="http://www.w3.org/2000/svg" y="0px">
+                <ul class="carousel__menu">
+                    <li class="carousel__arrow">
+                        <button onclick="moveDirection('left')">
+                            <svg viewBox="0 0 490 490" width="30" x="0px" xml:space="preserve"
+                                 xmlns="http://www.w3.org/2000/svg" y="0px">
                             <path d="M15.806,244.992L474.194,490V0L15.806,244.992z M241.24,244.995l129.986-69.473v138.951L241.24,244.995z"/>
                         </svg>
 
-                    </button>
-                </li>
-                <li class="carousel__number">
-                    <button class="carousel__button">1</button>
-                </li>
-                <li class="carousel__number">
-                    <button class="carousel__button">2</button>
-                </li>
-                <li class="carousel__number">
-                    <button class="carousel__button">3</button>
-                </li>
-                <li class="carousel__number">
-                    <button class="carousel__button">4</button>
-                </li>
+                        </button>
+                    </li>
+                    <li class="carousel__number">
+                        <button class="carousel__button">1</button>
+                    </li>
+                    <li class="carousel__number">
+                        <button class="carousel__button">2</button>
+                    </li>
+                    <li class="carousel__number">
+                        <button class="carousel__button">3</button>
+                    </li>
+                    <li class="carousel__number">
+                        <button class="carousel__button">4</button>
+                    </li>
 
-                <li class="carousel__arrow">
-                    <button onclick="moveDirection('right')">
-                        <svg viewBox="0 0 490 490" width="30" x="0px" xml:space="preserve"
-                             xmlns="http://www.w3.org/2000/svg" y="0px">
+                    <li class="carousel__arrow">
+                        <button onclick="moveDirection('right')">
+                            <svg viewBox="0 0 490 490" width="30" x="0px" xml:space="preserve"
+                                 xmlns="http://www.w3.org/2000/svg" y="0px">
                             <path d="M474.194,245.008L15.806,0v490L474.194,245.008z M248.76,245.005l-129.986,69.473V175.527L248.76,245.005z"/>
                         </svg>
-                    </button>
-                </li>
-            </ul>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+            <div class="graph">
+                <p>test</p>
+            </div>
         </div>
     </main>
 
-    <script src="assets/js/variables.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/variables.homepage.js"></script>
+    <script src="assets/js/homepage.js"></script>
     <!-- Carousel scripts -->
-    <!--    <script src="assets/js/carousel/carousel.js"></script>-->
-    <script src="assets/js/carousel.js"></script>
+    <!--    <script src="assets/js/carousel/carousel.homepage.js"></script>-->
+    <script src="assets/js/carousel.homepage.js"></script>
     <script src="assets/js/carousel/move.carousel.js"></script>
     <script src="assets/js/carousel/content.carousel.js"></script>
-    <script src="assets/js/shortcuts.js"></script>
+    <script src="assets/js/shortcuts.homepage.js"></script>
 </body>
 </html>
