Delete header code to merge on dev branch

--- a/src/team.html
+++ b/src/team.html
@@ -5,43 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WildCoin</title>
-    <link href="../assets/css/style.css" rel="stylesheet">
+    <link href="../assets/css/team.css" rel="stylesheet">
 </head>
 <body>
     <div id="body-container">
-        <header>
-            <div class="topnav">
-                <div class="burger">
-                    <a href="">
-                        <i class="fa fa-bars"></i>
-                    </a>
-                </div>
-                <div class="logo-title">
-                    <img class="logo" href="index.html" src="../assets/img/W-logo-white-coralback-_1_.webp" alt="wild code school project wild coin">
-                    <a class="coin" href="index.html"><h2>coin</h2></a>
-                    <ul class="menu_desktop">
-                        <li>Accueil</li>
-                        <li>Cours</li>
-                        <li>L'équipe</li>
-                    </ul>
-                </div>
-            </div>
-            <nav class="nav-menu">
-                <ul class="nav-slider">
-                    <li class="nav-slider-menu-x">
-                        <i class="fas fa-times"></i>
-                    </li>
-                    <li class="nav-slider-menu">
-                        <a href="index.html"><h2>Accueil</h2></a></li>
-                    <li class="nav-slider-menu">
-                        <a href="src/cours.html"><h2>Cours</h2></a>
-                    </li>
-                    <li class="nav-slider-menu">
-                        <a href="src/team.html"><h2>Equipe</h2></a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
         
         <h2 class="team-title">La Team</h2>
 
