--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 <body>
     <!-- Header -->
     <div style="height: 10vh; background-color: red;"></div>
-
+    <button onclick="swapTheme()" style="
+        position: absolute;
+        background-color: var(--background-color);
+        top: 0;
+    ">
+        Change theme
+    </button>
     <div class="hidden modal">
         This modal, which is part of the {placeholder} also passes the {placeholder}
     </div>
@@ -128,9 +134,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="graph">
-                <p>test</p>
-            </div>
+            <div class="graph"></div>
         </div>
     </main>
 
