Last saved before git merge

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       <div class="burger" id="burger">
         <span></span>
       </div>
+      <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="checkbox">
+          <input type="checkbox" id="checkbox" />
+          <div class="slider round"><img id="moon" src="./Ressources/307307.svg" alt=""><img id="sun" src="./Ressources/sun--v2.png" alt="">
+          </div>
+        </label>
+      </div>
       <div class="topnav">
         <div class="logo-title">
           <img
