pull and merge all feature branches. Begin of code debug

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
             <input type="checkbox" id="checkbox" />
-            <div class="slider round"><img id="moon" src="./Ressources/307307.svg" alt=""><img id="sun" src="./Ressources/sun--v2.png" alt="">
+            <div class="slider round"><img id="moon" src="./assets/img/307307.svg" alt=""><img id="sun" src="./Ressources/sun--v2.png" alt="">
             </div>
           </label>
         </div>
@@ -41,14 +41,14 @@
                 <a href="index.html">Accueil</a>
               </li>
               <li class="nav-slider-item">
-                <a href="src/cours.html">Cours</a>
+                <a href="src/ratings.html">Cours</a>
               </li>
               <li class="nav-slider-item">
                 <a href="src/team.html">Equipe</a>
               </li>
               <li class="nav-slider-item">
                   <a href=""></a>
-                </li>
+              </li>
             </ul>
           </nav>
         </div>
