--- a/src/ratings.html
+++ b/src/ratings.html
@@ -154,7 +154,7 @@
       </div>
     </div>
 
-    <script src="./assets/js/darkmode.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <!-- <script src="../assets/js/darkmode.js"></script> -->
+    <script src="../assets/js/app.js"></script>
   </body>
 </html>
