--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="assets/css/homepage.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
     <header>
@@ -41,7 +41,7 @@
                 <a href="index.html">Accueil</a>
               </li>
               <li class="nav-slider-item">
-                <a href="src/cours.html">Cours</a>
+                <a href="src/ratings.html">Cours</a>
               </li>
               <li class="nav-slider-item">
                 <a href="src/team.html">Equipe</a>
@@ -204,6 +204,6 @@
       src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
       data-auto-replace-svg="nest"
     ></script>
-    <script src="./assets/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
