--- a/src/team.html
+++ b/src/team.html
@@ -6,8 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WildCoin</title>
     <link href="../assets/css/team.css" rel="stylesheet">
+    <link href="assets/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
+    <header>
+        <div class="burger" id="burger">
+          <span></span>
+        </div>
+        <div class="theme-switch-wrapper">
+          <label class="theme-switch" for="checkbox">
+            <input type="checkbox" id="checkbox" />
+            <div class="slider round"><img id="moon" src="./Ressources/307307.svg" alt=""><img id="sun" src="./Ressources/sun--v2.png" alt="">
+            </div>
+          </label>
+        </div>
+        <div class="topnav">
+          <div class="logo-title">
+            <img
+              class="logo"
+              href="../index.html"
+              src="../assets/img/Copie_de_logo-white-transparentback_1.png"
+              alt="wild code school project wild coin"
+            />
+            <!-- <a class="coin" href="index.html">wildcoin</a> -->
+          </div>
+          <nav class="nav-menu" id="nav-menu">
+            <ul class="nav-slider">
+              <li class="nav-slider-item">
+                <a href="../index.html">Accueil</a>
+              </li>
+              <li class="nav-slider-item">
+                <a href="ratings.html">Cours</a>
+              </li>
+              <li class="nav-slider-item">
+                <a href="team.html">Equipe</a>
+              </li>
+              <li class="nav-slider-item">
+                  <a href=""></a>
+                </li>
+            </ul>
+          </nav>
+        </div>
+    </header>
     <div id="body-container">
         
         <h2 class="team-title">La Team</h2>
@@ -30,8 +71,35 @@
         </section>
     </div>
 
+    <footer>
+        <div class="footer-content">
+            <ul class="footer-contact"> 
+                <li class="footer-contact-item">
+                    <a href="">
+                      Contactez-nous
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="logo-reseaux-sociaux">
+          <div class="logo-size">
+            <i class="fab fa-facebook"></i>
+          </div>
+          <div class="logo-size">
+            <i class="fab fa-instagram"></i>
+          </div>
+          <div class="logo-size">
+            <i class="fab fa-youtube"></i>
+          </div>
+          <div class="logo-size">
+            <i class="fab fa-github"></i>
+          </div>
+        </div>
+      </footer>
+
     <script src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" data-auto-replace-svg="nest"></script>
     <script src="../assets/js/items.js"></script>
     <script src="../assets/js/team.js"></script>
-</body>
+    <script src="../assets/js/script.js"></script>
+  </body>
 </html>
