Commit to pull changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="assets/css/homepage.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="checkbox">
             <input type="checkbox" id="checkbox" />
-            <div class="slider round"><img id="moon" src="./assets/img/307307.svg" alt=""><img id="sun" src="./Ressources/sun--v2.png" alt="">
+            <div class="slider round"><img id="moon" src="assets/img/307307.svg" alt=""><img id="sun" src="./assets/img/sun--v2.png" alt="">
             </div>
           </label>
         </div>
@@ -204,6 +204,6 @@
       src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
       data-auto-replace-svg="nest"
     ></script>
-    <script src="./assets/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
