Fix/debug rating.html

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
       data-auto-replace-svg="nest"
     ></script>
+    <!-- <script src="./assets/js/darkmode.js"></script> -->
     <script src="./assets/script.js"></script>
 </body>
 </html>
