3e Fix/debug rating.html

--- a/src/ratings.html
+++ b/src/ratings.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/ratings.css" />
-    <link rel="stylesheet" href="../assets/style.css">
-    <link rel="stylesheet" href="../assets/">
+   
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
     <link
       href="https://fonts.googleapis.com/css?family=Red+Hat+Text:400,500&display=swap"
@@ -222,6 +222,6 @@
       </div>
     </footer>
     <script src="../assets/js/app.js"></script>
-    <script src="../assets/script.js"></script>
+    <script src="../assets/js/script.js"></script>
   </body>
 </html>
