Navbar and footer have been updated

--- a/index.html
+++ b/index.html
@@ -205,6 +205,6 @@
       data-auto-replace-svg="nest"
     ></script>
     <!-- <script src="./assets/js/darkmode.js"></script> -->
-    <script src="./assets/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
