--- a/src/ratings.html
+++ b/src/ratings.html
@@ -223,5 +223,9 @@
     </footer>
     <script src="../assets/js/app.js"></script>
     <script src="../assets/js/script.js"></script>
+    <script
+      src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
+      data-auto-replace-svg="nest"
+    ></script>
   </body>
 </html>
