Navbar and footer have been updated

--- a/src/team.html
+++ b/src/team.html
@@ -37,10 +37,10 @@
                 <a href="../index.html">Accueil</a>
               </li>
               <li class="nav-slider-item">
-                <a href="ratings.html">Cours</a>
+                <a href="../ratings.html">Cours</a>
               </li>
               <li class="nav-slider-item">
-                <a href="team.html">Equipe</a>
+                <a href="../team.html">Equipe</a>
               </li>
               <li class="nav-slider-item">
                   <a href=""></a>
