--- a/src/ratings.html
+++ b/src/ratings.html
@@ -46,7 +46,7 @@
         <nav class="nav-menu" id="nav-menu">
           <ul class="nav-slider">
             <li class="nav-slider-item">
-              <a href="index.html">Accueil</a>
+              <a href="../index.html">Accueil</a>
             </li>
             <li class="nav-slider-item">
               <a href="src/cours.html">Cours</a>
