Navbar and footer have been updated

--- a/src/ratings.html
+++ b/src/ratings.html
@@ -37,7 +37,7 @@
         <div class="logo-title">
           <img
             class="logo"
-            href="index.html"
+            href="../index.html"
             src="../assets/img/Copie_de_logo-white-transparentback_1.png"
             alt="wild code school project wild coin"
           />
@@ -49,10 +49,10 @@
               <a href="../index.html">Accueil</a>
             </li>
             <li class="nav-slider-item">
-              <a href="src/cours.html">Cours</a>
+              <a href="ratings.html">Cours</a>
             </li>
             <li class="nav-slider-item">
-              <a href="src/team.html">Equipe</a>
+              <a href="team.html">Equipe</a>
             </li>
             <li class="nav-slider-item">
                 <a href=""></a>
