Switch button has been fixed and variable size has been added

--- a/src/ratings.html
+++ b/src/ratings.html
@@ -24,23 +24,28 @@
   <body>
     <header>
       <div class="burger" id="burger">
-        <span></span>
+          <span></span>
       </div>
       <div class="theme-switch-wrapper">
+      
         <label class="theme-switch" for="checkbox">
           <input type="checkbox" id="checkbox" />
-          <div class="slider round"><img id="moon" src="../assets/img/307307.svg" alt=""><img id="sun" src="../assets/img/sun--v2.png" alt="">
-          </div>
+          <span class="slider round">
+            <img class="" id="moon" src="assets/img/307307.svg" alt="">
+            <img class="" id="sun" src="assets/img/sun--v2.png" alt="">
+          </span>
         </label>
       </div>
       <div class="topnav">
         <div class="logo-title">
-          <img
+          <a href="../index.html">
+            <img
             class="logo"
-            href="../index.html"
-            src="../assets/img/Copie_de_logo-white-transparentback_1.png"
+            src="assets/img/Copie_de_logo-white-transparentback_1.png"
             alt="wild code school project wild coin"
           />
+        </a>
+          
           <!-- <a class="coin" href="index.html">wildcoin</a> -->
         </div>
         <nav class="nav-menu" id="nav-menu">
@@ -60,7 +65,7 @@
           </ul>
         </nav>
       </div>
-    </header>
+  </header>
     <container class="container">
       <cards class="cards">
         <bitcoin class="btc">
