Switch button has been fixed and variable size has been added

--- a/src/team.html
+++ b/src/team.html
@@ -29,7 +29,7 @@
         <a href="../index.html">
           <img
           class="logo"
-          src="assets/img/Copie_de_logo-white-transparentback_1.png"
+          src="../assets/img/Copie_de_logo-white-transparentback_1.png"
           alt="wild code school project wild coin"
         />
       </a>
